# colab_remote_file_sync_and_executor

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: github_push_test.yml
app/: colab_functions.py  constants.py  errors.py  logger.py  main.py  minio_functions.py  schemas.py
documentation/: colab_ssh_config_script.ipynb  openapi.yaml  openapi_yaml_generator.py  test_script.ipynb  test_script.py
tests/: test_demo.py
